--- a/app/src/main/assets/guide.html
+++ b/app/src/main/assets/guide.html
@@ -5,7 +5,7 @@
     <meta CONTENT="text/html; charset=utf-8" HTTP-EQUIV=CONTENT-TYPE>
     <title>Diapo 1</title>
 </head>
-<body alink="#808080" bgcolor="#FFFFFF" link="#000080" text="#000000" vlink="#C0C0C0">
+<body alink="#3484E2" bgcolor="#FFFFFF" link="#3484E2" text="#000000" vlink="#B4B4B4">
 <center>
     <h2><a href="img0.html">Cliquez ici pour démarrer</a></h2>
 </center>
@@ -23,7 +23,6 @@
                 <div align="left"><a href="img6.html">Diapo 7</a></div>
             </td>
             <td align="left" valign="top" width="75%">
-                <p><strong>Auteur:</strong> JM</p>
                 <a href="img0.html"><img alt="Diapo 1" height="192" src="thumb0.png"
                                          width="256"></a>
                 <a href="img1.html"><img alt="Diapo 2" height="192" src="thumb1.png"
