--- a/app/src/main/assets/img0.html
+++ b/app/src/main/assets/img0.html
@@ -5,7 +5,7 @@
     <meta CONTENT="text/html; charset=utf-8" HTTP-EQUIV=CONTENT-TYPE>
     <title>Diapo 1</title>
 </head>
-<body alink="#808080" bgcolor="#FFFFFF" link="#000080" text="#000000" vlink="#C0C0C0">
+<body alink="#3484E2" bgcolor="#FFFFFF" link="#3484E2" text="#000000" vlink="#B4B4B4">
 <center>
     <img alt="Première page" border=0 src="first-inactive.png"> <img alt="Précédent" border=0
                                                                      src="left-inactive.png"> <a
