creation d'un bouton d'import des noms de concours pour la configuration Concours

--- a/app/src/main/assets/img0.html
+++ b/app/src/main/assets/img0.html
@@ -3,9 +3,9 @@
 <html>
 <head>
     <meta CONTENT="text/html; charset=utf-8" HTTP-EQUIV=CONTENT-TYPE>
-    <title>Diapo 1</title>
+    <title>Page 1</title>
 </head>
-<body alink="#3484E2" bgcolor="#FFFFFF" link="#3484E2" text="#000000" vlink="#B4B4B4">
+<body alink="#1B6ACB" bgcolor="#FFFFFF" link="#1B6ACB" text="#000000" vlink="#15539E">
 <center>
     <img alt="Première page" border=0 src="first-inactive.png"> <img alt="Précédent" border=0
                                                                      src="left-inactive.png"> <a
