--- a/app/src/main/assets/guide.html
+++ b/app/src/main/assets/guide.html
@@ -3,9 +3,9 @@
 <html>
 <head>
     <meta CONTENT="text/html; charset=utf-8" HTTP-EQUIV=CONTENT-TYPE>
-    <title>Diapo 1</title>
+    <title>Page 1</title>
 </head>
-<body alink="#3484E2" bgcolor="#FFFFFF" link="#3484E2" text="#000000" vlink="#B4B4B4">
+<body alink="#1B6ACB" bgcolor="#FFFFFF" link="#1B6ACB" text="#000000" vlink="#15539E">
 <center>
     <h2><a href="img0.html">Cliquez ici pour démarrer</a></h2>
 </center>
@@ -14,29 +14,22 @@
         <tr>
             <td align="left" valign="top" width="25%">
                 <h3>Table des matières</h3>
-                <div align="left"><a href="img0.html">Diapo 1</a></div>
-                <div align="left"><a href="img1.html">Diapo 2</a></div>
-                <div align="left"><a href="img2.html">Diapo 3</a></div>
-                <div align="left"><a href="img3.html">Diapo 4</a></div>
-                <div align="left"><a href="img4.html">Diapo 5</a></div>
-                <div align="left"><a href="img5.html">Diapo 6</a></div>
-                <div align="left"><a href="img6.html">Diapo 7</a></div>
+                <div align="left"><a href="img0.html">Page 1</a></div>
+                <div align="left"><a href="img1.html">Page 2</a></div>
+                <div align="left"><a href="img2.html">Page 3</a></div>
+                <div align="left"><a href="img3.html">Page 4</a></div>
+                <div align="left"><a href="img4.html">Page 5</a></div>
+                <div align="left"><a href="img5.html">Page 6</a></div>
+                <div align="left"><a href="img6.html">Page 7</a></div>
             </td>
             <td align="left" valign="top" width="75%">
-                <a href="img0.html"><img alt="Diapo 1" height="192" src="thumb0.png"
-                                         width="256"></a>
-                <a href="img1.html"><img alt="Diapo 2" height="192" src="thumb1.png"
-                                         width="256"></a>
-                <a href="img2.html"><img alt="Diapo 3" height="192" src="thumb2.png"
-                                         width="256"></a>
-                <a href="img3.html"><img alt="Diapo 4" height="192" src="thumb3.png"
-                                         width="256"></a>
-                <a href="img4.html"><img alt="Diapo 5" height="192" src="thumb4.png"
-                                         width="256"></a>
-                <a href="img5.html"><img alt="Diapo 6" height="192" src="thumb5.png"
-                                         width="256"></a>
-                <a href="img6.html"><img alt="Diapo 7" height="192" src="thumb6.png"
-                                         width="256"></a>
+                <a href="img0.html"><img alt="Page 1" height="192" src="thumb0.png" width="256"></a>
+                <a href="img1.html"><img alt="Page 2" height="192" src="thumb1.png" width="256"></a>
+                <a href="img2.html"><img alt="Page 3" height="192" src="thumb2.png" width="256"></a>
+                <a href="img3.html"><img alt="Page 4" height="192" src="thumb3.png" width="256"></a>
+                <a href="img4.html"><img alt="Page 5" height="192" src="thumb4.png" width="256"></a>
+                <a href="img5.html"><img alt="Page 6" height="192" src="thumb5.png" width="256"></a>
+                <a href="img6.html"><img alt="Page 7" height="192" src="thumb6.png" width="256"></a>
             </td>
         </tr>
     </table>
