--- a/app/src/main/assets/img2.html
+++ b/app/src/main/assets/img2.html
@@ -3,9 +3,9 @@
 <html>
 <head>
     <meta CONTENT="text/html; charset=utf-8" HTTP-EQUIV=CONTENT-TYPE>
-    <title>Diapo 3</title>
+    <title>Page 3</title>
 </head>
-<body alink="#3484E2" bgcolor="#FFFFFF" link="#3484E2" text="#000000" vlink="#B4B4B4">
+<body alink="#1B6ACB" bgcolor="#FFFFFF" link="#1B6ACB" text="#000000" vlink="#15539E">
 <center>
     <a href="img0.html"><img alt="Première page" border=0 src="first.png"></a> <a
         href="img1.html"><img alt="Précédent" border=0 src="left.png"></a> <a href="img3.html"><img
