Modification du pointage sur cible. introduction d'un offset pour etre plus facile. Correction sortie sur configuration concours par retour arriere (verrou) modification des layout pour type d'ecran different

--- a/app/src/main/assets/img5.html
+++ b/app/src/main/assets/img5.html
@@ -5,14 +5,10 @@
     <meta CONTENT="text/html; charset=utf-8" HTTP-EQUIV=CONTENT-TYPE>
     <title>Page 6</title>
 </head>
-<body alink="#1B6ACB" bgcolor="#FFFFFF" link="#1B6ACB" text="#000000" vlink="#15539E">
+<body alink="#3584E4" bgcolor="#FFFFFF" link="#3584E4" text="#000000" vlink="#1B6ACB">
 <center>
-    <a href="img0.html"><img alt="Première page" border=0 src="first.png"></a> <a
-        href="img4.html"><img alt="Précédent" border=0 src="left.png"></a> <a href="img6.html"><img
-        alt="Suivant" border=0 src="right.png"></a> <a href="img6.html"><img alt="Dernière page"
-                                                                             border=0
-                                                                             src="last.png"></a> <a
-        href="guide.html"><img alt="Résumé" border=0 src="home.png"></a></center>
+    <a href="img0.html">Première page</a> <a href="img4.html">Précédent</a> <a href="img6.html">Suivant</a>
+    <a href="img7.html">Dernière page</a> <a href="guide.html">Résumé</a></center>
 <br>
 <center><img alt="" src="img5.png"></center>
 </body>
