--- a/app/src/main/assets/img7.html
+++ b/app/src/main/assets/img7.html
@@ -3,13 +3,13 @@
 <html>
 <head>
     <meta CONTENT="text/html; charset=utf-8" HTTP-EQUIV=CONTENT-TYPE>
-    <title>Page 1</title>
+    <title>Page 8</title>
 </head>
 <body alink="#3584E4" bgcolor="#FFFFFF" link="#3584E4" text="#000000" vlink="#1B6ACB">
 <center>
-    Première page Précédent <a href="img1.html">Suivant</a> <a href="img7.html">Dernière page</a> <a
+    <a href="img0.html">Première page</a> <a href="img6.html">Précédent</a> Suivant Dernière page <a
         href="guide.html">Résumé</a></center>
 <br>
-<center><img alt="" src="img0.png"></center>
+<center><img alt="" src="img7.png"></center>
 </body>
 </html>
