--- a/app/src/main/assets/guide.html
+++ b/app/src/main/assets/guide.html
@@ -5,7 +5,7 @@
     <meta CONTENT="text/html; charset=utf-8" HTTP-EQUIV=CONTENT-TYPE>
     <title>Page 1</title>
 </head>
-<body alink="#1B6ACB" bgcolor="#FFFFFF" link="#1B6ACB" text="#000000" vlink="#15539E">
+<body alink="#3584E4" bgcolor="#FFFFFF" link="#3584E4" text="#000000" vlink="#1B6ACB">
 <center>
     <h2><a href="img0.html">Cliquez ici pour démarrer</a></h2>
 </center>
@@ -21,8 +21,10 @@
                 <div align="left"><a href="img4.html">Page 5</a></div>
                 <div align="left"><a href="img5.html">Page 6</a></div>
                 <div align="left"><a href="img6.html">Page 7</a></div>
+                <div align="left"><a href="img7.html">Page 8</a></div>
             </td>
             <td align="left" valign="top" width="75%">
+                <p><strong>Auteur:</strong> JM</p>
                 <a href="img0.html"><img alt="Page 1" height="192" src="thumb0.png" width="256"></a>
                 <a href="img1.html"><img alt="Page 2" height="192" src="thumb1.png" width="256"></a>
                 <a href="img2.html"><img alt="Page 3" height="192" src="thumb2.png" width="256"></a>
@@ -30,6 +32,7 @@
                 <a href="img4.html"><img alt="Page 5" height="192" src="thumb4.png" width="256"></a>
                 <a href="img5.html"><img alt="Page 6" height="192" src="thumb5.png" width="256"></a>
                 <a href="img6.html"><img alt="Page 7" height="192" src="thumb6.png" width="256"></a>
+                <a href="img7.html"><img alt="Page 8" height="192" src="thumb7.png" width="256"></a>
             </td>
         </tr>
     </table>
